# contextops

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  MANIFEST.in  README.md  REFACTOR_PLAN.md  SECURITY.md  pyproject.toml  setup.cfg
.github/: CODEOWNERS  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: bench-regression.yml  ci.yml
contextops/: __init__.py  cli.py  cli_views.py  clients.py  dataset.py  eval.py  integrations.py  judge.py  logger.py  models.py  optimizer.py  pricing.py  render.py  report.py
contextops_bench/: __init__.py  __main__.py  client_protocol.py  clients.py  prompt_factory.py  runner.py  stats.py  types.py  usage.py
contextops_bench/data/: realistic_agent_system.md  realistic_agent_tools.json
docs/: ACCEPTANCE.md  CODE_REVIEW.md  PLAN_v0.3.3.md  POSTMORTEM_realistic_cache.md
docs/archive/: REFACTOR_PLAN.md
evals/: baseline_prompt.json  optimized_prompt.json  sample_dataset.jsonl
examples/: 01_basic_optimize.py  02_compare.py  03_log_calls.py
scripts/: bootstrap.sh  ci_bench_gate.py  publish_to_github.sh  test_local.sh
scripts/diag/: README.md  diag_anthropic.py  diag_pinned_v2.py
scripts/diagnostics/: README.md  diag_cache.py  diag_pinned.py  diag_pinned_v2.py  diag_zen.py  diag_zen_auth.py  diag_zen_n5.py  diag_zen_ua.py  diag_zen_usage.py
tests/: test_anthropic_integration.py  test_bench_clients.py  test_bench_stats.py  test_bench_unit.py  test_budget.py  test_cli.py  test_logger.py  test_logger_trend_export.py  test_models_import.py  test_optimizer.py  test_pricing.py  test_render.py  test_usage.py  test_v02_eval.py
