[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "contextops"
version = "0.2.3"
description = "Cache-aware prompt structure optimizer + local cost/usage logger for LLM apps."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "contextops" }]
keywords = ["llm", "prompt", "optimization", "cost", "cache", "observability"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries",
]
dependencies = [
    "tiktoken>=0.7",
    "click>=8.1",
    "rich>=13.7",
    "pydantic>=2.6",
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "ruff>=0.4", "mypy>=1.10"]
integrations = ["litellm>=1.40"]
bench = []
all = ["litellm>=1.40"]

[project.scripts]
contextops = "contextops.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["contextops*", "contextops_bench*"]

[tool.ruff]
line-length = 100
target-version = "py310"