[metadata]
name = contextops
version = 0.2.0
description = Cache-aware prompt structure optimizer + LLM-as-judge eval + local cost/usage logger
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/contextops/contextops
project_urls =
    Bug Tracker = https://github.com/contextops/contextops/issues
    Documentation = https://github.com/contextops/contextops#readme
    Source = https://github.com/contextops/contextops
author = ContextOps Contributors
license = MIT
classifiers =
    Development Status :: 3 - Alpha
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12
    Topic :: Software Development :: Libraries
    Topic :: Scientific/Engineering :: Artificial Intelligence
keywords =
    llm
    prompt
    optimization
    cost
    cache
    observability
    eval
    judge

[options]
packages = find:
python_requires = >=3.10
install_requires =
    tiktoken>=0.7
    click>=8.1
    rich>=13.7
    pydantic>=2.6

[options.entry_points]
console_scripts =
    contextops = contextops.cli:main